src/test/test-models/bad/rng_loc1.stan
functions {
  real foo(real x) {
    return exponential_rng(x);
  }
}
model {
}
